Run format source code

--- a/core/src/tag/styles/warning.module.css
+++ b/core/src/tag/styles/warning.module.css
@@ -1,5 +1,5 @@
 .root {
-  color: #FFC777;
-  border: 1px solid #FFC777;
-  background-color: #FFFCF0;
+  color: #ffc777;
+  border: 1px solid #ffc777;
+  background-color: #fffcf0;
 }
