--- a/core/src/typography/styles/heading.module.css
+++ b/core/src/typography/styles/heading.module.css
@@ -5,35 +5,35 @@
 .heading5,
 .heading6 {
   font-family: var(--font-sans);
-  font-weight: 700;
+  font-weight: normal;
 }
 
 .heading1 {
   font-size: 40px;
-  line-height: 60px;
+  line-height: 48px;
 }
 
 .heading2 {
   font-size: 36px;
-  line-height: 54px;
+  line-height: 44px;
 }
 
 .heading3 {
   font-size: 28px;
-  line-height: 42px;
+  line-height: 36px;
 }
 
 .heading4 {
   font-size: 24px;
-  line-height: 36px;
+  line-height: 32px;
 }
 
 .heading5 {
   font-size: 20px;
-  line-height: 30px;
+  line-height: 28px;
 }
 
 .heading6 {
   font-size: 18px;
-  line-height: 27px;
+  line-height: 22px;
 }
