add input element

--- a/core/src/input/input/index.module.css
+++ b/core/src/input/input/index.module.css
@@ -5,16 +5,29 @@
 
 .input {
   display: inline-block;
+  padding: 0.5rem 1rem;
   width: 100%;
-  padding: 13px 16px;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 14px;
+  line-height: 24px;
   font-family: var(--font-sans);
-  border-radius: 8px;
-  border: 1px solid var(--color-gray-500);
+  color: var(--color-gray-700);
+  border-radius: var(--border-radius-md);
+  border: 1px solid var(--color-gray-400);
   background-color: var(--color-white);
-  /* ignore top box shadow on safari mobile */
-  -webkit-appearance: none;
+  transition: all .2s ease;
+  font-weight: 500;
+}
+
+.input.sm {
+  padding: 0.5rem 1rem;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.input.lg {
+  padding: 0.625rem 1rem;
+  font-size: 16px;
+  line-height: 28px;
 }
 
 .input:hover {
@@ -24,7 +37,7 @@
 .input:focus {
   outline: none;
   background-color: var(--color-white);
-  border: 1px solid var(--color-gray-700);
+  border-color: var(--color-gray-500);
 }
 
 .input:disabled {
