add left right icon, setup dev enviroment

--- a/core/src/input/input/index.module.css
+++ b/core/src/input/input/index.module.css
@@ -1,6 +1,8 @@
 .inputWrapper {
   width: 100%;
   position: relative;
+  cursor: text;
+
 }
 
 .input {
@@ -31,7 +33,7 @@
 }
 
 .input:hover {
-  cursor: pointer;
+  cursor: text;
   border-color: var(--color-gray-500);
 }
 
