--- a/core/src/input/input-element/index.module.css
+++ b/core/src/input/input-element/index.module.css
@@ -3,3 +3,38 @@
     position: relative;
     display: flex;
 }
+
+.insetStart {
+    left: 0;
+}
+
+.insetEnd {
+    right: 0;
+}
+
+.centerItem {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    height: 100%;
+    padding: 0 var(--space-4);
+}
+
+.insetEnd{
+    right:0;
+}
+
+.insetStart{
+    left:0;
+}
+
+.absolute {
+    position: absolute;
+    top:0;
+}
+
+.cursorPointer {
+    cursor: pointer;
+}
