--- a/core/src/toggle/styles/toggle.module.css
+++ b/core/src/toggle/styles/toggle.module.css
@@ -1,48 +1,56 @@
-.switch .input {
-  position: absolute;
-  opacity: 0;
+.toggle {
+    display: flex;
+    align-items: center;
 }
 
-.switch {
-  display: inline-block;
-  width: 42px;
-  height: 24px;
-  padding: 2px;
-
-  background: #bdb9a6;
-  border-radius: 24px;
+.toggle.disabled {
+    pointer-events: none;
 }
 
-/* the circle */
-.switch .circle {
-  height: 20px;
-  width: 20px;
-
-  border-radius: 24px;
-  background: #fff;
-  -webkit-transition: all 300ms;
-  -moz-transition: all 300ms;
-  transition: all 300ms;
+.toggle .wrapper {
+    display: block;
+    width: var(--toggle-width);
+    height: var(--toggle-height);
+    background-color: var(--color-gray-300);
+    border-radius: 1000px;
+    position: relative;
+    transition: all 0.15s linear;
+    cursor: pointer;
 }
 
-.switch input:checked + .circle {
-  -webkit-transform: translate3d(18px, 0, 0);
-  -moz-transform: translate3d(18px, 0, 0);
-  transform: translate3d(18px, 0, 0);
+.toggle.checked .wrapper {
+    background-color: var(--color-brand-500);
 }
 
-.on {
-  background-color: var(--color-brand-02);
+.toggle .wrapper::after {
+    --padding: calc((var(--toggle-height) - var(--toggle-size)) / 2);
+
+    content: '';
+    position: absolute;
+    background-color: var(--color-white);
+
+    width: var(--toggle-size);
+    border-radius: 1000px;
+    top: var(--padding);
+    bottom: var(--padding);
+    left: var(--padding);
+    transition: all 0.15s linear;
 }
 
-.off {
-  background-color: var(--color-gray-300);
+.toggle.disabled .wrapper {
+    background-color: var(--color-brand-100);
 }
 
-.disabledOn {
-  background-color: var(--color-brand-04);
+.toggle.checked .wrapper::after {
+    left: calc(100% - 2px - var(--toggle-size));
 }
 
-.disabledOff {
-  background-color: var(--color-gray-200);
+.toggle .label {
+    margin-left: 0.5rem;
+    font-size: var(--toggle-height);
+    color: var(--color-brand-600);
+}
+
+.toggle.disabled .label {
+    color: var(--color-gray-400);
 }
