--- a/core/src/input/input/index.module.css
+++ b/core/src/input/input/index.module.css
@@ -1,89 +1,88 @@
 .inputWrapper {
-  width: 100%;
-  position: relative;
-  cursor: text;
-
+    width: 100%;
+    position: relative;
+    cursor: text;
 }
 
 .input {
-  display: inline-block;
-  padding: 0.5rem 1rem;
-  width: 100%;
-  font-size: 14px;
-  line-height: 24px;
-  font-family: var(--font-sans);
-  color: var(--color-gray-700);
-  border-radius: var(--border-radius-md);
-  border: 1px solid var(--color-gray-400);
-  background-color: var(--color-white);
-  transition: all .2s ease;
-  font-weight: 500;
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    width: 100%;
+    font-size: 14px;
+    line-height: 24px;
+    font-family: var(--font-sans);
+    color: var(--color-gray-700);
+    border-radius: var(--border-radius-md);
+    border: 1px solid var(--color-gray-400);
+    background-color: var(--color-white);
+    transition: all 0.2s ease;
+    font-weight: 500;
 }
 
 .input.sm {
-  padding: 0.5rem 1rem;
-  font-size: 12px;
-  line-height: 16px;
+    padding: 0.5rem 1rem;
+    font-size: 12px;
+    line-height: 16px;
 }
 
 .input.lg {
-  padding: 0.625rem 1rem;
-  font-size: 16px;
-  line-height: 28px;
+    padding: 0.625rem 1rem;
+    font-size: 16px;
+    line-height: 28px;
 }
 
 .input:hover {
-  cursor: text;
-  border-color: var(--color-gray-500);
+    cursor: text;
+    border-color: var(--color-gray-500);
 }
 
 .input:focus {
-  outline: none;
-  border-color: var(--color-blue-500);
-  box-shadow: 0 0 0 3px rgba(117, 200, 255, 0.5);
+    outline: none;
+    border-color: var(--color-blue-500);
+    box-shadow: 0 0 0 3px rgba(117, 200, 255, 0.5);
 }
 
-.input:invalid{
-  border-color: var(--color-red-500);
-  box-shadow: none
+.input:invalid {
+    border-color: var(--color-red-500);
+    box-shadow: none;
 }
 
 .input:disabled {
-  border-color: var(--color-gray-300);
+    border-color: var(--color-gray-300);
 }
 
 .input:disabled ~ .label {
-  color: var(--color-gray-300);
+    color: var(--color-gray-300);
 }
 
 input::placeholder {
-  color: var(--color-gray-400);
+    color: var(--color-gray-400);
 }
 
 .input:focus ~ .label,
 .input:not(:placeholder-shown) ~ .label {
-  top: 0;
-  padding: 0 4px;
-  font-size: 12px;
-  font-weight: 600;
-  background: var(--color-white);
+    top: 0;
+    padding: 0 4px;
+    font-size: 12px;
+    font-weight: 600;
+    background: var(--color-white);
 }
 
 .input:valid ~ .label {
-  color: var(--color-gray-500);
+    color: var(--color-gray-500);
 }
 
 .input:focus ~ .label {
-  color: var(--color-gray-700);
+    color: var(--color-gray-700);
 }
 
 .label {
-  position: absolute;
-  display: inline-block;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 16px;
-  pointer-events: none;
-  color: var(--color-gray-400);
-  transition: all 0.2s ease-in-out;
+    position: absolute;
+    display: inline-block;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 16px;
+    pointer-events: none;
+    color: var(--color-gray-400);
+    transition: all 0.2s ease-in-out;
 }
