input addon => textbox

--- a/core/src/toggle/styles/toggle.module.css
+++ b/core/src/toggle/styles/toggle.module.css
@@ -48,7 +48,7 @@
 .toggle .label {
     margin-left: 0.5rem;
     font-size: var(--toggle-height);
-    color: var(--color-brand-600);
+    color: var(--color-gray-600);
 }
 
 .toggle.disabled .label {
