--- a/core/src/button/styles/primary.module.css
+++ b/core/src/button/styles/primary.module.css
@@ -1,17 +1,19 @@
 .root {
     color: var(--color-white);
     border: solid 1px transparent;
-    background-color: var(--color-brand-500);
+    background-color: var(--color-gray-700);
 }
 
 .root:hover {
-    background-color: var(--color-brand-600);
+    color: var(--color-brand-400);
 }
 
 .root:active {
-    background-color: var(--color-brand-700);
+    color: var(--color-brand-400);
+    background-color: var(--color-gray-800);
 }
 
 .root:disabled {
-    background-color: var(--color-brand-200);
+    background-color: var(--color-gray-100);
+    color: var(--color-gray-400);
 }
