--- a/packages/react/src/theme/theme.css
+++ b/packages/react/src/theme/theme.css
@@ -1,4 +1,4 @@
-@import 'reset.css';
+@import './reset.css';
 :root {
     /* FONTS */
     --font-sans: Gilroy, system-ui, -apple-system, sans-serif;
