update input background and imageProps avatar

--- a/packages/react/src/text-box/styles/TextBox.module.css
+++ b/packages/react/src/text-box/styles/TextBox.module.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     color: var(--color-gray-700);
+    background-color: white;
 }
 
 .input.disabled {
