--- a/packages/react/src/typography/styles/body.module.css
+++ b/packages/react/src/typography/styles/body.module.css
@@ -9,31 +9,31 @@
 }
 
 .body1 {
-    font-size: 18px;
-    line-height: 32px;
+    font-size: 1.125rem;
+    line-height: 2rem;
 }
 
 .body2 {
-    font-size: 16px;
-    line-height: 28px;
+    font-size: 1rem;
+    line-height: 1.75rem;
 }
 
 .body3 {
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 0.875rem;
+    line-height: 1.5rem;
 }
 
 .body4 {
-    font-size: 12px;
-    line-height: 16px;
+    font-size: 0.75rem;
+    line-height: 1rem;
 }
 
 .body5 {
-    font-size: 10px;
-    line-height: 16px;
+    font-size: 0.625rem;
+    line-height: 1rem;
 }
 
 .body6 {
-    font-size: 9px;
-    line-height: 12px;
+    font-size: 0.563rem;
+    line-height: 0.75rem;
 }
