--- a/packages/react/src/typography/styles/display.module.css
+++ b/packages/react/src/typography/styles/display.module.css
@@ -6,12 +6,12 @@
 }
 
 .display1 {
-    font-size: 52px;
-    line-height: 72px;
+    font-size: 3.25rem;
+    line-height: 4.5rem;
 }
 
 .display2 {
-    font-size: 44px;
-    line-height: 64px;
+    font-size: 2.75rem;
+    line-height: 4rem;
     letter-spacing: -0.015em;
 }
