--- a/packages/react/src/typography/styles/heading.module.css
+++ b/packages/react/src/typography/styles/heading.module.css
@@ -10,31 +10,31 @@
 }
 
 .heading1 {
-    font-size: 40px;
-    line-height: 56px;
+    font-size: 2.5rem;
+    line-height: 3.5rem;
 }
 
 .heading2 {
-    font-size: 36px;
-    line-height: 52px;
+    font-size: 2.25rem;
+    line-height: 3.25rem;
 }
 
 .heading3 {
-    font-size: 28px;
-    line-height: 40px;
+    font-size: 1.75rem;
+    line-height: 2.5rem;
 }
 
 .heading4 {
-    font-size: 24px;
-    line-height: 36px;
+    font-size: 1.5rem;
+    line-height: 2.25rem;
 }
 
 .heading5 {
-    font-size: 20px;
-    line-height: 32px;
+    font-size: 1.25rem;
+    line-height: 2rem;
 }
 
 .heading6 {
-    font-size: 18px;
-    line-height: 28px;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
 }
