--- a/packages/react/src/typography/styles/label.module.css
+++ b/packages/react/src/typography/styles/label.module.css
@@ -9,33 +9,33 @@
 }
 
 .label1 {
-    font-size: 18px;
-    line-height: 32px;
+    font-size: 1.125rem;
+    line-height: 2rem;
 }
 
 .label2 {
-    font-size: 16px;
-    line-height: 28px;
+    font-size: 1rem;
+    line-height: 1.75rem;
 }
 
 .label3 {
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 0.875rem;
+    line-height: 1.5rem;
 }
 
 .label4 {
-    font-size: 12px;
-    line-height: 16px;
+    font-size: 0.75rem;
+    line-height: 1rem;
 }
 
 /* Label5 is deprecated since version 0.0.12 and will be deleted in 0.1.0 */
 .label5 {
-    font-size: 11px;
-    line-height: 16px;
+    font-size: 0.6875rem;
+    line-height: 1rem;
 }
 
 /* Label6 is deprecated since version 0.0.12 and will be deleted in 0.1.0 */
 .label6 {
-    font-size: 10px;
-    line-height: 16px;
+    font-size: 0.625rem;
+    line-height: 1rem;
 }
