only fontsize is em

--- a/packages/react/src/typography/styles/body.module.css
+++ b/packages/react/src/typography/styles/body.module.css
@@ -9,31 +9,31 @@
 }
 
 .body1 {
-    font-size: 1.125rem;
+    font-size: 1.125em;
     line-height: 2rem;
 }
 
 .body2 {
-    font-size: 1rem;
+    font-size: 1em;
     line-height: 1.75rem;
 }
 
 .body3 {
-    font-size: 0.875rem;
+    font-size: 0.875em;
     line-height: 1.5rem;
 }
 
 .body4 {
-    font-size: 0.75rem;
+    font-size: 0.75em;
     line-height: 1rem;
 }
 
 .body5 {
-    font-size: 0.625rem;
+    font-size: 0.625em;
     line-height: 1rem;
 }
 
 .body6 {
-    font-size: 0.563rem;
+    font-size: 0.563em;
     line-height: 0.75rem;
 }
