--- a/packages/react/src/typography/styles/heading.module.css
+++ b/packages/react/src/typography/styles/heading.module.css
@@ -10,31 +10,31 @@
 }
 
 .heading1 {
-    font-size: 2.5rem;
+    font-size: 2.5em;
     line-height: 3.5rem;
 }
 
 .heading2 {
-    font-size: 2.25rem;
+    font-size: 2.25em;
     line-height: 3.25rem;
 }
 
 .heading3 {
-    font-size: 1.75rem;
+    font-size: 1.75em;
     line-height: 2.5rem;
 }
 
 .heading4 {
-    font-size: 1.5rem;
+    font-size: 1.5em;
     line-height: 2.25rem;
 }
 
 .heading5 {
-    font-size: 1.25rem;
+    font-size: 1.25em;
     line-height: 2rem;
 }
 
 .heading6 {
-    font-size: 1.125rem;
+    font-size: 1.125em;
     line-height: 1.75rem;
 }
