--- a/packages/react/src/button/styles/secondary.module.css
+++ b/packages/react/src/button/styles/secondary.module.css
@@ -1,21 +1,21 @@
 .root {
     color: var(--color-gray-700);
-    background-color: var(--color-white);
+    background-color: var(--color-white) !important;
     border: 1px solid #cbd5e0;
 }
 
 .root:hover {
-    background-color: var(--color-gray-50);
+    background-color: var(--color-gray-50) !important;
     border: 1px solid #c3cdd8;
 }
 
 .root:active {
-    background-color: var(--color-gray-100);
+    background-color: var(--color-gray-100) !important;
     border: 1px solid #c3cdd8;
 }
 
 .root:disabled {
     color: var(--color-gray-400);
-    background-color: var(--color-white);
+    background-color: var(--color-white) !important;
     border: 1px solid #f1f5f9;
 }
