--- a/packages/react/src/button/styles/brand.module.css
+++ b/packages/react/src/button/styles/brand.module.css
@@ -1,17 +1,17 @@
 .root {
     color: var(--color-white);
     border: solid 1px transparent;
-    background-color: var(--color-brand-500);
+    background-color: var(--color-brand-500) !important;
 }
 
 .root:hover {
-    background-color: var(--color-brand-600);
+    background-color: var(--color-brand-600) !important;
 }
 
 .root:active {
-    background-color: var(--color-brand-700);
+    background-color: var(--color-brand-700) !important;
 }
 
 .root:disabled {
-    background-color: var(--color-brand-200);
+    background-color: var(--color-brand-200) !important;
 }
