feat: back to transparent mode by default

--- a/packages/react/src/button/styles/button.module.css
+++ b/packages/react/src/button/styles/button.module.css
@@ -6,6 +6,7 @@
     justify-content: center;
     text-decoration: none;
     border-radius: 10px;
+    background-color: transparent;
 
     /* Enforce width in case of link */
     width: fit-content;
