--- a/packages/react/src/button/styles/ghost.module.css
+++ b/packages/react/src/button/styles/ghost.module.css
@@ -1,6 +1,7 @@
 .root {
     color: var(--color-gray-700) !important;
     border: solid 1px transparent;
+    background-color: transparent !important;
 }
 
 .root:hover {
