--- a/packages/react/src/button/styles/ghost.module.css
+++ b/packages/react/src/button/styles/ghost.module.css
@@ -1,15 +1,15 @@
 .root {
     color: var(--color-gray-700) !important;
     border: solid 1px transparent;
-    background-color: transparent !important;
-}
-
-.root:hover {
     background-color: var(--color-gray-100) !important;
 }
 
-.root:active {
+.root:hover {
     background-color: var(--color-gray-200) !important;
+}
+
+.root:active {
+    background-color: var(--color-gray-100) !important;
 }
 
 .root:disabled {
