--- a/packages/react/src/button/styles/ghost.module.css
+++ b/packages/react/src/button/styles/ghost.module.css
@@ -1,5 +1,5 @@
 .root {
-    color: var(--color-gray-700) !important;
+    color: var(--color-gray-700);
     border: solid 1px transparent;
     background-color: var(--color-gray-100) !important;
 }
